--- a/server/Makefile
+++ b/server/Makefile
@@ -15,7 +15,7 @@ all:
 	chmod u+s /usr/bin/delchef
 	chmod g+s /usr/bin/delchef
 	chown delchef:delchef /usr/bin/delchef
-	rm -rf /etc/init/delchef
+	rm -rf /etc/init/delchef.conf
 	mv delchef.upstart /etc/init/delchef.conf
 	chmod /etc/init/delchef.conf 0644
 	chown root:root /etc/init/delchef.conf
